--- a/nosql/1.hbase and hadoop key information.md
+++ b/nosql/1.hbase and hadoop key information.md
@@ -41,21 +41,22 @@
 
 ## 3. HBase在写入hdfs时，既然是链式复制，为什么在DN数为1与3的情况下，性能相差不大？  
 
-**最终答案是：hbase2.x开始，添加了asyncfs(fan-out)的实现(修改了hdfs的客户端)。具体可以见：https://www.slideshare.net/HBaseCon/apache-hbase-improvements-and-practices-at-xiaomi**
+**最终答案是：hbase2.x开始，添加了asyncfs(fan-out)的实现(修改了hdfs的客户端)。  
+>具体可以见：https://www.slideshare.net/HBaseCon/apache-hbase-improvements-and-practices-at-xiaomi**
 
 
 ## 4. 其它关键问题
 
-1) hbase client的每个请求，是否一定写完WAL再ack?  
-**最终答案是: yes**
+**1) hbase client的每个请求，是否一定写完WAL再ack?**  
+>最终答案是: yes
 
-2) hbase asyncfs的实现，是否等所有DN返回才算写入成功?  
-**最终答案是: yes**
+**2) hbase asyncfs的实现，是否等所有DN返回才算写入成功?**  
+>最终答案是: yes
 
-3) hbase asyncfs的实现，若DN数少于dfs.replication数，是什么机制?  
-**最终答案是: 与chain复制一样，若 N < fs.replication (N为活动的DN数），则写入N个DN后算是成功**
+**3) hbase asyncfs的实现，若DN数少于dfs.replication数，是什么机制?**  
+>最终答案是: 与chain复制一样，若 N < fs.replication (N为活动的DN数），则写入N个DN后算是成功
 
-4) hbase asyncfs 是如何让hdfs的DN不自己复制？  
-**最终答案是: hdfs里client和dn通信的协议里有，dn要不要往其他dn写是client告诉他的，fan-out的时候client告诉每个DN只写自己就行**
+**4) hbase asyncfs 是如何让hdfs的DN不自己复制？**    
+>最终答案是: hdfs里client和dn通信的协议里有，dn要不要往其他dn写是client告诉他的，fan-out的时候client告诉每个DN只写自己就行
 
 
