--- a/nosql/1.hbase and hadoop key information.md
+++ b/nosql/1.hbase and hadoop key information.md
@@ -1,5 +1,7 @@
 # hbase与hadoop的一些关键点
 
+(本文属于原创内容，未经作者许可，不得转载。)  
+
 最近工作上需要用到hbase与hadoop，本文将调研的一些关键点markdown一下，相关的版本号是hbase2.1.0, hadoop3.1.1。  
 
 本文打算使用case by case的方式介绍，重点在于存储、复制部分。
