--- a/nosql/1.hbase and hadoop key information.md
+++ b/nosql/1.hbase and hadoop key information.md
@@ -19,7 +19,7 @@
  
 >首先看看hdfs相关paper的资料，如下图：
  
-![write in hdfs](https://github.com/dragon-distributed/book/blob/master/nosql/material/1.hdfs%20write.jpg)
+![write in hdfs](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/nosql/1.hdfs%20write.jpg)
  
 >很明显，这就是个链式复制，而且ack是要等所有DNs ack之后才ack client的。
  
@@ -44,7 +44,7 @@
 ## 3. HBase在写入hdfs时，既然是链式复制，为什么在DN数为1与3的情况下，性能相差不大？  
 
 **最终答案是：hbase2.x开始，添加了asyncfs(fan-out)的实现(修改了hdfs的客户端)。**  
->具体可以见：https://www.slideshare.net/HBaseCon/apache-hbase-improvements-and-practices-at-xiaomi**
+>具体可以见：https://www.slideshare.net/HBaseCon/apache-hbase-improvements-and-practices-at-xiaomi
 
 
 ## 4. 其它关键问题
