--- a/storage/1. 深入剖析mmap-从三个关键问题说起.md
+++ b/storage/1. 深入剖析mmap-从三个关键问题说起.md
@@ -16,7 +16,7 @@
 
 Logstore中，使用mmap对数据文件进行读写。Logstore的存储结构简化如下图：
 
-![logstore mmap](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/logstore%20mmap.png)
+![logstore mmap](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/storage/1.logstore%20mmap.jpg)
 
 Logstore使用了Segments Files + Index Files的方式存储Log，Segment File是存储主体，用于存储Log数据，使用定长的方式，默认每个512M，Index File主要用于Segment File的内容检索。
 
@@ -36,7 +36,7 @@ Logstore使用mmap的方式读写Segment File，Segments Files的个数，主要
 
 我们先来简单看一下mapping一个文件，mmap做了什么事情。如下图所示：
 
-![map file](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/map%20file.png)
+![map file](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/storage/1.map%20file.jpg)
 
 
 假设我们mmap的文件是FileA，在调用mmap之后，会在进程的虚拟内存分配地址空间，创建映射关系。
@@ -64,7 +64,7 @@ Logstore使用mmap的方式读写Segment File，Segments Files的个数，主要
 
 上述例子，在mmap之后，如下图：
 
-![virtual-physica](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/virtual-physical.png)
+![virtual-physica](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/storage/1.virtual-physical.jpg)
 
 
 在mmap之后，并没有在将文件内容加载到物理页上，只上在虚拟内存中分配了地址空间。当进程在访问这段地址时（通过mmap在写入或读取时FileA），若虚拟内存对应的page没有在物理内存中缓存，则产生"缺页"，由内核的缺页异常处理程序处理，将文件对应内容，以页为单位(4096)加载到物理内存，注意是只加载缺页，但也会受操作系统一些调度策略影响，加载的比所需的多，这里就不展开了。
@@ -72,7 +72,7 @@ Logstore使用mmap的方式读写Segment File，Segments Files的个数，主要
 
 缺页处理后，如下图：
 
-![virtual-physical assign](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/virtual-physical%20assign.png)
+![virtual-physical assign](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/storage/1.virtual-physical%20assign.jpg)
 
 
 ### mmap的分类
@@ -81,7 +81,7 @@ Logstore使用mmap的方式读写Segment File，Segments Files的个数，主要
 
 #### 有backend
 
-![backend mmap](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/backend%20mmap.png)
+![backend mmap](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/storage/1.backend%20mmap.jpg)
 
 
 这种模式将普通文件做memory mapping(非MAP_ANONYMOUS)，所以在mmap系统调用时，需要传入文件的fd。这种模式常见的有两个常用的方式，MAP_SHARED与MAP_PRIVATE，但它们的行为却不相同。
@@ -146,7 +146,7 @@ mmap的性能经常与系统调用（write/read）做对比。
 
 我们先来简单讲讲write系统调用写文件的过程：
 
-![write process](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/write%20process.png)
+![write process](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/storage/1.write%20process.jpg)
 
 
 1) Step1：进程(用户态)调用write系统调用，并告诉内核需要写入数据的开始地址与长度（告诉内核写入的数据在哪）。
@@ -191,7 +191,7 @@ mmap的性能经常与系统调用（write/read）做对比。
 
 我们还是来简单分析read调用与mmap的流程：
 
-![read process](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/read%20process.png)
+![read process](https://longdandan-1256672193.cos.ap-guangzhou.myqcloud.com/article/storage/1.read%20process.jpg)
 
 
 从图中可以看出，read调用确实比mmap多一次copy。因为read调用，进程是无法直接访问kernel space的，所以在read系统调用返回前，内核需要将数据从内核复制到进程指定的buffer。但mmap之后，进程可以直接访问mmap的数据(page cache)。
