--- a/blockchain/1.ethereum storage analysis.md
+++ b/blockchain/1.ethereum storage analysis.md
@@ -1,7 +1,7 @@
 
 # ethereum存储分析
 
-(本文属于原创内容，未经作者许可，不得转载。)  
+(本文属于原创内容，首发于https://github.com/dragon-distributed/book , 未经作者许可，不得转载。)  
 
 本文将以举例的方式，讲解  
 1) Level DB是如何存储MPT tree  
