--- a/storage/1.深入剖析mmap-从三个关键问题说起.md
+++ b/storage/1.深入剖析mmap-从三个关键问题说起.md
@@ -1,5 +1,5 @@
 # 深入剖析mmap-从三个关键问题说起
-(本文属于原创内容，未经作者许可，不得转载。)  
+(本文属于原创内容，首发于https://github.com/dragon-distributed/book , 未经作者许可，不得转载。)  
 
 ## 概述
 
