--- a/storage/1.深入剖析mmap-从三个关键问题说起.md
+++ b/storage/1.深入剖析mmap-从三个关键问题说起.md
@@ -203,7 +203,7 @@ mmap的性能经常与系统调用（write/read）做对比。
 场景：对2G的文件进行顺序读取(go语言编写)
 (ps: 为了避免磁盘对测试的影响，我让2G文件都缓存在pagecache中)
 
-每次读取大小 | mmap 耗时 | write 耗时
+每次读取大小 | mmap 耗时 | read 耗时
 --------------- | ------- | -------- | --------
 | 1 byte | 8215.4ms | > 300s 
 | 100 bytes | 86.4ms | 8100.9ms
