--- a/storage/1.深入剖析mmap-从三个关键问题说起.md
+++ b/storage/1.深入剖析mmap-从三个关键问题说起.md
@@ -168,11 +168,11 @@ mmap的性能经常与系统调用（write/read）做对比。
 
 下面我们对两者进行性能测试：
 
-场景：对2G的文件进行顺序写入(go语言编写)
-
+场景：对2G的文件进行顺序写入(go语言编写)  
+  
 每次写入大小 | mmap 耗时 | write 耗时
 --------------- | ------- | -------- | --------
-| 1 byte | 22.14s | >300s 
+| 1 byte | 22.14s | \>300s 
 | 100 bytes | 2.84s | 22.86s
 | 512 bytes | 2.51s | 5.43s
 | 1024 bytes | 2.48s | 3.48s
@@ -202,10 +202,10 @@ mmap的性能经常与系统调用（write/read）做对比。
 
 场景：对2G的文件进行顺序读取(go语言编写)
 (ps: 为了避免磁盘对测试的影响，我让2G文件都缓存在pagecache中)
-
+  
 每次读取大小 | mmap 耗时 | read 耗时
 --------------- | ------- | -------- | --------
-| 1 byte | 8215.4ms | > 300s 
+| 1 byte | 8215.4ms | \> 300s 
 | 100 bytes | 86.4ms | 8100.9ms
 | 512 bytes | 16.14ms | 1851.45ms
 | 1024 bytes | 8.11ms | 992.71ms
