--- a/storage/1.深入剖析mmap-从三个关键问题说起.md
+++ b/storage/1.深入剖析mmap-从三个关键问题说起.md
@@ -172,14 +172,14 @@ mmap的性能经常与系统调用（write/read）做对比。
   
 每次写入大小 | mmap 耗时 | write 耗时
 --------------- | ------- | -------- | --------
-| 1 byte | 22.14s | \>300s 
-| 100 bytes | 2.84s | 22.86s
-| 512 bytes | 2.51s | 5.43s
-| 1024 bytes | 2.48s | 3.48s
-| 2048 bytes | 2.47s | 2.34s
-| 4096 bytes | 2.48s | 1.74s
-| 8192 bytes | 2.45s | 1.67s
-| 10240 bytes | 2.49s | 1.65s
+1 byte | 22.14s | >300s 
+100 bytes | 2.84s | 22.86s
+512 bytes | 2.51s | 5.43s
+1024 bytes | 2.48s | 3.48s
+2048 bytes | 2.47s | 2.34s
+4096 bytes | 2.48s | 1.74s
+8192 bytes | 2.45s | 1.67s
+10240 bytes | 2.49s | 1.65s
 
 可以看到mmap在100byte写入时已经基本达到最大写入性能，而write调用需要在4096(也就是一个page size)时，才能达到最大写入性能。
 
@@ -205,14 +205,14 @@ mmap的性能经常与系统调用（write/read）做对比。
   
 每次读取大小 | mmap 耗时 | read 耗时
 --------------- | ------- | -------- | --------
-| 1 byte | 8215.4ms | \> 300s 
-| 100 bytes | 86.4ms | 8100.9ms
-| 512 bytes | 16.14ms | 1851.45ms
-| 1024 bytes | 8.11ms | 992.71ms
-| 2048 bytes | 4.09ms | 636.85ms
-| 4096 bytes | 2.07ms | 558.10ms
-| 8192 bytes | 1.06ms | 444.83ms
-| 10240 bytes | 867.88µs | 475.28ms
+1 byte | 8215.4ms | > 300s 
+100 bytes | 86.4ms | 8100.9ms
+512 bytes | 16.14ms | 1851.45ms
+1024 bytes | 8.11ms | 992.71ms
+2048 bytes | 4.09ms | 636.85ms
+4096 bytes | 2.07ms | 558.10ms
+8192 bytes | 1.06ms | 444.83ms
+10240 bytes | 867.88µs | 475.28ms
 
 由上可以看出，在read上面，mmap比write的性能差别还是很大的。测试结果与理论推导吻合。
 
