update pic in arts

--- a/distributed/6.Linearizable Quorum Reads In Paxos/6.Linearizable Quorum Reads in Paxos.md
+++ b/distributed/6.Linearizable Quorum Reads In Paxos/6.Linearizable Quorum Reads in Paxos.md
@@ -48,10 +48,10 @@ LSN为Logical Sequence Number，逻辑序列。基于LSN的思想是，在写的
 Rinse Phase：不知道怎么翻译好，其实就是类似于Long Polling，它主要是需要客户端等待第一阶段中的max slot被从节点commit。流程是，客户端随便选一个从节点，发送Rinse Phase的Request，当从节点对应的slot commit完，并且中间的空洞也commit完，才进行Response。
 论文中的图片如下：
 
-[1.1 process_mark.jpg](https://github.com/dragon-distributed/book/blob/b95ab9a7af83949e79880e02d25a0f6332c0ce49/distributed/6.Linearizable%20Quorum%20Reads%20In%20Paxos/1.1%20process_mark.jpg)
+![1.1 process_mark.jpg](https://github.com/dragon-distributed/book/blob/b95ab9a7af83949e79880e02d25a0f6332c0ce49/distributed/6.Linearizable%20Quorum%20Reads%20In%20Paxos/1.1%20process_mark.jpg)
 我也做了另一个图讲解，如下图所示：
 
-[1.2 detail_mark.jpg](https://github.com/dragon-distributed/book/blob/b95ab9a7af83949e79880e02d25a0f6332c0ce49/distributed/6.Linearizable%20Quorum%20Reads%20In%20Paxos/1.2%20detail_mark.jpg)
+![1.2 detail_mark.jpg](https://github.com/dragon-distributed/book/blob/b95ab9a7af83949e79880e02d25a0f6332c0ce49/distributed/6.Linearizable%20Quorum%20Reads%20In%20Paxos/1.2%20detail_mark.jpg)
 
 假设分布式系统有5个节点，在多数派读阶段，我们假设client请求的从节点是2,3,4，那么Client将得到max slot是5，在Rinse Phase阶段，client可以去请求任意一个从节点，对应的从节点需要在slot5被commit之后（注意1-4也需要commit），才返回。
 
@@ -71,7 +71,7 @@ Rinse Phase：不知道怎么翻译好，其实就是类似于Long Polling，它
 
 比如KV的系统，如果把存储结构加上slot:
 
-[1.3 kv structs_mark.jpg](https://github.com/dragon-distributed/book/blob/b95ab9a7af83949e79880e02d25a0f6332c0ce49/distributed/6.Linearizable%20Quorum%20Reads%20In%20Paxos/1.3%20kv%20structs_mark.jpg)
+![1.3 kv structs_mark.jpg](https://github.com/dragon-distributed/book/blob/b95ab9a7af83949e79880e02d25a0f6332c0ce49/distributed/6.Linearizable%20Quorum%20Reads%20In%20Paxos/1.3%20kv%20structs_mark.jpg)
 
 
 比如，还是上面的例子，一个client求请Key为KA的Value，而KA是slot 1写入的，则只要Client知道max commit已经超过slot 1，就可以直接返回，则不需要进行Rinse Phase。
