update pic in arts

--- a/distributed/6.Linearizable Quorum Reads In Paxos/6.Linearizable Quorum Reads in Paxos.md
+++ b/distributed/6.Linearizable Quorum Reads In Paxos/6.Linearizable Quorum Reads in Paxos.md
@@ -42,10 +42,11 @@ LSN为Logical Sequence Number，逻辑序列。基于LSN的思想是，在写的
 
 ## Paxos Quorum Reads
 
-我们接下来介绍论文的思想：Paxos Quorum Reads，Paxos多数派读。它其实是个2PC的协议，其核心实现思路分为两步：
+我们接下来介绍论文的思想：Paxos Quorum Reads，Paxos多数派读。它其实是个2PC的协议，其核心实现思路分为两步： 
 
-多数派读(Quorum-read Phase)：客户端会往除了Leader的多数派节点读取数据，每个节点返回两个数据，一个是last accepted value，另外一个是max slot(即Paxos中的instance)。值得注意的是，这个max slot是不管空洞的，即如果一个从节点accept了1,3,5,7，那么就返回7。
-Rinse Phase：不知道怎么翻译好，其实就是类似于Long Polling，它主要是需要客户端等待第一阶段中的max slot被从节点commit。流程是，客户端随便选一个从节点，发送Rinse Phase的Request，当从节点对应的slot commit完，并且中间的空洞也commit完，才进行Response。
+1. 多数派读(Quorum-read Phase)：客户端会往除了Leader的多数派节点读取数据，每个节点返回两个数据，一个是last accepted value，另外一个是max slot(即Paxos中的instance)。值得注意的是，这个max slot是不管空洞的，即如果一个从节点accept了1,3,5,7，那么就返回7。  
+2. Rinse Phase：不知道怎么翻译好，其实就是类似于Long Polling，它主要是需要客户端等待第一阶段中的max slot被从节点commit。流程是，客户端随便选一个从节点，发送Rinse Phase的Request，当从节点对应的slot commit完，并且中间的空洞也commit完，才进行Response。  
+
 论文中的图片如下：
 
 ![1.1 process_mark.jpg](https://github.com/dragon-distributed/book/blob/b95ab9a7af83949e79880e02d25a0f6332c0ce49/distributed/6.Linearizable%20Quorum%20Reads%20In%20Paxos/1.1%20process_mark.jpg)
@@ -72,7 +73,6 @@ Rinse Phase：不知道怎么翻译好，其实就是类似于Long Polling，它
 比如KV的系统，如果把存储结构加上slot:
 
 ![1.3 kv structs_mark.jpg](https://github.com/dragon-distributed/book/blob/b95ab9a7af83949e79880e02d25a0f6332c0ce49/distributed/6.Linearizable%20Quorum%20Reads%20In%20Paxos/1.3%20kv%20structs_mark.jpg)
-
 
 比如，还是上面的例子，一个client求请Key为KA的Value，而KA是slot 1写入的，则只要Client知道max commit已经超过slot 1，就可以直接返回，则不需要进行Rinse Phase。
 
